--- a/All Projects/Profile Card/danish.html
+++ b/All Projects/Profile Card/danish.html
@@ -19,7 +19,8 @@
         <div class="img-box">
             <img src="Assets/danish.jpeg" alt="">
         </div>
-
+        <div class="status"></div>
+        
         <h1 class="name">Md Sonu</h1>
         <small class="work">Designer/Developer</small>
 
@@ -30,7 +31,7 @@
                 </a>
             </div>
 
-            <h3 style="color: rgb(123, 109, 136);">View Our Team</h3>
+            <h3 style="color: rgb(123, 109, 136);">Team Members</h3>
 
             <div class="button">
                 <a href="">
