--- a/All Projects/Profile Card/index.html
+++ b/All Projects/Profile Card/index.html
@@ -19,18 +19,19 @@
         <div class="img-box">
             <img src="Assets/T-shirt.jpg" alt="">
         </div>
+        <div class="status"></div>
 
         <h1 class="name">Naresh Kumar</h1>
         <small class="work">Designer/Developer</small>
 
         <div class="scroll-btn">
             <div class="button">
-                <a href="prarthi.html">
+                <a href="">
                     <i class="fa-solid fa-angles-left"></i>
                 </a>
             </div>
 
-            <h3 style="color: rgb(123, 109, 136);">View Our Team</h3>
+            <h3 style="color: rgb(123, 109, 136);">Team Members</h3>
 
             <div class="button">
                 <a href="danish.html">
@@ -90,7 +91,6 @@
                 </a>
             </div>
         </div>
-
 
     </div>
 </body>
